# OpenGLTestProject

./: CMakeLists.txt  README.md
assets/shaders/: VertexShader.glsl
include/: render.c  render.h  test.c  test.h
src/: main.c  render.c  render.h  shader.c  shader.h
